test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/bitwise_void.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[4]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 10
                      None: 
                    None: 
                  Int: 
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: y
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 11
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CExpression: 
                CBinary: 
                  CBitAnd: 
                  CVar: 
                    TIdentifier: x
                    None: 
                  CCast: 
                    CVar: 
                      TIdentifier: y
                      None: 
                    Void: 
                    None: 
                  None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
